# PSE

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp  spent_time.txt  timeSpend.txt
Specificatie_1/1_1_Verkeerssituatie_inlezen/: 1.1 Verkeerssituatie inlezen
Specificatie_1/Elementen/: VERKEERSLICHT.h  VOERTUIG.cpp  VOERTUIGGENERATOR.cpp  VOERTUIGGENERATOR.h
output/: errors.txt
specificatie 1/Elementen/: VOERTUIG.h
specificatie_1/: simulation.cpp  simulation.h
specificatie_1/1_1_Verkeerssituatie_inlezen/: Verkeerssituatie_inlezen.cpp  Verkeerssituatie_inlezen.h  test.cpp  test.h
specificatie_1/1_1_verkeerssituatie_inlezen/: VerkeersSituatieInlezen.cpp  VerkeersSituatieInlezen.h  VerkeerssituatieInlezen.cpp  VerkeerssituatieInlezen.h
specificatie_1/Elementen/: BAAN.cpp  BAAN.h
src/: DesignByContract.cpp  DesignByContract.h  Exceptions.h  TicTacToeTests.cpp  voorbeeld.xml  voorbeeld2.xml
src/Elementen/: Baan.cpp  VERKEERSLICHT.cpp  VERKEERSLICHT.h  VOERTUIG.h  VOERTUIGGENERATOR.h  Voertuig.cpp  Voertuig.h
src/elementen/: Baan.cpp  Baan.h  Bushalte.cpp  Bushalte.h  Constants.h  Kruispunt.cpp  Kruispunt.h  TypeVoertuig.cpp  TypeVoertuig.h  Verkeerslicht.cpp  Verkeerslicht.h  Voertuig.cpp  Voertuig.h  Voertuiggenerator.cpp  Voertuiggenerator.h
src/elementen/voertuigen/: Auto.cpp  Auto.h  Brandweerwagen.cpp  Brandweerwagen.h  Bus.cpp  Bus.h  Politiecombi.cpp  Politiecombi.h  Ziekenwagen.cpp  Ziekenwagen.h
src/logs_and_errors/: ErrorOutput.cpp  ErrorOutput.h  Logger.cpp  Logger.h
src/simulatie/: Parser.cpp  Parser.h  SimPrinter.cpp  SimPrinter.h  Simulator.cpp  Simulator.h  XMLParser.cpp  XMLParser.h  simulation.cpp  simulation.h
src/simulatie/parsing/: UniversalParser.cpp  UniversalParser.h
src/simulatie/parsing/factory/: ParserFactory.cpp  ParserFactory.h
src/simulatie/parsing/interfaces/: IParserStrategy.h
src/simulatie/parsing/strategies/: JSONParserStrategy.cpp  JSONParserStrategy.h  XMLParserStrategy.cpp  XMLParserStrategy.h
src/voorbeeldXML/: voorbeeld.xml  voorbeeld10.xml  voorbeeld11.xml  voorbeeld12.xml  voorbeeld2.xml  voorbeeld3.xml  voorbeeld4.xml  voorbeeld5.xml  voorbeeld6.xml  voorbeeld7.xml  voorbeeld8.xml  voorbeeld9.xml  voorbeeldXMLobject.xml
test/: BushalteTest.cpp  ErrorTest.cpp  FixedErrorTests.cpp  HappiestDay.cpp  ParserTest.cpp  VerkeerslichtTest.cpp  VoertuigTest.cpp  VoertuiggeneratorTest.cpp  fixederrortests.cpp  tests.cpp
test/outputs/: expected_combined_errors.txt  expected_different_order.txt  expected_errors.txt  expected_invalid_xml.txt
test/specificatie1/1_1_verkeerssituatie_inlezen/: SimulationTESTS.cpp  VerkeersSituatieInlezenTest.cpp  VerkeerssituatieInlezenTest.cpp  basic_test.xml  basic_test10.xml  basic_test11.xml  basic_test12.xml  basic_test2.xml  basic_test3.xml  basic_test4.xml  basic_test5.xml  basic_test6.xml  basic_test7.xml  basic_test8.xml  basic_test9.xml  empty_file.xml  happiestday.xml  outputTESTfile.xml  verkeerslicht_positie_gt_baan_lengte.xml  verkeerssituatie_zonder_baan.xml  verschillende_volgorde_van_elementen.xml  voertuig_positie_gt_baan_lengte.xml  voertuig_verwijderen.xml  wrong_data_types.xml  wrong_data_types_verkeerslicht.xml  wrong_data_types_voertuig.xml
test/specificatie2/: voertuigMetType1_3.xml
test/test-xml-files/: only_auto_op_baan.xml  only_brandweerwagen_op_baan.xml
test/xml/VoertuigTests/: only_bus_op_baan.xml  only_politiecombi_op_baan.xml  only_ziekenwagen_op_baan.xml
test/xml/parserTests/: baan_zonder_naam_of_lengte.xml  gecombineerde_foute.xml  malformed.xml
utils/: Game.cpp  Game.h
voorbeelden/: TicTacToe.cpp  TicTacToe.h  TicTacToeTests.cpp
